--- a/.github/workflows/deploy_fom_frontdoor_lambda.yml
+++ b/.github/workflows/deploy_fom_frontdoor_lambda.yml
@@ -1,6 +1,8 @@
 name: deploy fom frontdoor to lambda
 on:
   push:
+    paths:
+      - 'lambdas/fom-frontdoor/**'
     branches: [ master ]
 jobs:
   deploy_source:
