--- a/first-order-model/Dockerfile
+++ b/first-order-model/Dockerfile
@@ -1,21 +1,25 @@
-FROM nvcr.io/nvidia/cuda:10.0-cudnn7-runtime-ubuntu18.04
+FROM 694126695710.dkr.ecr.us-west-2.amazonaws.com/first_order_model_base:latest
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get -qq update \
-  && DEBIAN_FRONTEND=noninteractive apt-get -qqy install python3-pip ffmpeg git less nano libsm6 libxext6 libxrender-dev \
-  && rm -rf /var/lib/apt/lists/*
+# FROM nvcr.io/nvidia/cuda:10.0-cudnn7-runtime-ubuntu18.04
 
-COPY requirements.txt .
+# RUN DEBIAN_FRONTEND=noninteractive apt-get -qq update \
+#   && DEBIAN_FRONTEND=noninteractive apt-get -qqy install python3-pip ffmpeg git less nano libsm6 libxext6 libxrender-dev \
+#   && rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install \
-  --upgrade setuptools \
-  https://download.pytorch.org/whl/cu100/torch-1.0.0-cp36-cp36m-linux_x86_64.whl \
-  -r requirements.txt
+# COPY requirements.txt .
 
-RUN chmod 777 /tmp
-RUN apt-get update
-RUN apt-get install -y curl
-RUN mkdir /app
-RUN curl -o /app/vox-adv-cpk.pth.tar https://spaceface-build-inputs.s3-us-west-2.amazonaws.com/first_order_model/vox-adv-cpk.pth.tar
+# RUN pip3 install \
+#   --upgrade setuptools \
+#   https://download.pytorch.org/whl/cu100/torch-1.0.0-cp36-cp36m-linux_x86_64.whl \
+#   -r requirements.txt
+
+# RUN chmod 777 /tmp
+# RUN apt-get update
+# RUN apt-get install -y curl
+# RUN mkdir /app
+# RUN curl -o /app/vox-adv-cpk.pth.tar https://spaceface-build-inputs.s3-us-west-2.amazonaws.com/first_order_model/vox-adv-cpk.pth.tar
+
+RUN pip3 install -r requirements.txt
 
 COPY faced /app/faced
 WORKDIR /app/faced
