--- a/.github/workflows/deploy_fom_container.yml
+++ b/.github/workflows/deploy_fom_container.yml
@@ -25,5 +25,5 @@ jobs:
           ECR_REPOSITORY: first_order_model_2
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG first-order-model/.
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest first-order-model/.
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
