--- a/.github/workflows/deploy_fom_container.yml
+++ b/.github/workflows/deploy_fom_container.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: first_order_model_2
+          ECR_REPOSITORY: first_order_model
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest first-order-model/.
